tests/fsharp/typecheck/sigs/neg130.bsl

neg130.fs(11,17,11,50): typecheck error FS0001: A generic construct requires that a generic type parameter be known as a struct or reference type. Consider adding a type annotation.

neg130.fs(15,14,15,47): typecheck error FS0001: A generic construct requires that a generic type parameter be known as a struct or reference type. Consider adding a type annotation.

neg130.fs(21,17,21,50): typecheck error FS0001: A generic construct requires that a generic type parameter be known as a struct or reference type. Consider adding a type annotation.

neg130.fs(25,14,25,47): typecheck error FS0001: A generic construct requires that a generic type parameter be known as a struct or reference type. Consider adding a type annotation.
